# docling_adi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: ci.yml  release.yml
docling_adi/: .env.example  __init__.py  plugin.py
examples/: docling_with_azure_di.py
tests/: test_azure_di_ocr.py
