[project]
name = "docling-adi"
version = "0.1.0"
description = "Docling plugin for Azure Document Intelligence OCR"
readme = "README.md"
authors = [
  { name = "Shubham Maurya" }
]
keywords = ["docling", "ocr", "azure", "document-intelligence", "plugin"]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.60.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-identity>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/shubham-maurya/docling_adi"
Repository = "https://github.com/shubham-maurya/docling_adi"
Issues = "https://github.com/shubham-maurya/docling_adi/issues"
Changelog = "https://github.com/shubham-maurya/docling_adi/blob/main/CHANGELOG.md"
"Reference Plugin" = "https://github.com/harrykhh/docling_surya"
"Reference Author" = "https://github.com/harrykhh"
"Reference PyPI" = "https://pypi.org/project/docling-surya/"

[project.entry-points.docling]
"azure-di" = "docling_adi.plugin"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.5.0",
    "reportlab>=4.4.4",
    "python-dotenv>=1.1.0",
    "docling-adi",
    "pytest-cov>=7.0.0",
    "commitizen>=4.13.8",
    "python-semantic-release>=10.5.3",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
docling-adi = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 88
respect-gitignore = true

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "C9",   # mccabe
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "PIE",  # pie
  "PTH",  # pathlib
  "Q",    # flake8-quotes
  "RET",  # return
  "RUF",  # ruff-specific
  "SIM",  # simplify
  "S307", # eval
  "T20",  # disallow print statements
  "W",    # pycodestyle warnings
  "ASYNC",# async
  "UP",   # pyupgrade
]

ignore = [
  "C408",   # Unnecessary `dict()` call
  "E501",   # Line too long, handled by formatter
  "D107",   # Missing docstring in __init__
  "F401",   # imported but unused
  "F811",   # redefinition of the same function
  "PL",     # Pylint
  "RUF012", # Mutable Class Attributes
  "UP006",  # List vs list
  "UP007",  # Option and Union
  "UP035",  # typing.Set deprecated
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*.py" = ["ASYNC", "T20"]
"examples/*.py" = ["T20"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=docling_adi",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
  "--cov-config=pyproject.toml",
  "-v",
]

# --------------------------------------------------------------------------- #
# Coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["docling_adi"]
branch = true
parallel = true
omit = [
  "tests/*",
  "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
  "raise ImportError",
  "raise NotImplementedError",
  "pass",
  "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
title = "docling-adi coverage"

[tool.coverage.xml]
output = "coverage.xml"

# --------------------------------------------------------------------------- #
# Semantic Release
# --------------------------------------------------------------------------- #
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["docling_adi/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version}\n\nAutomatically generated by python-semantic-release"
build_command = "uv build"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
  "^chore\\(release\\):",
  "^ci:",
  "^docs:",
  "^style:",
]

[tool.semantic_release.changelog.default_templates]
changelog = "angular"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "refactor",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "test",
  "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true

# --------------------------------------------------------------------------- #
# Commitizen — conventional commits & version bumping
# --------------------------------------------------------------------------- #
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "pyproject.toml:project.version",
  "docling_adi/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
style = [
  ["qmark", "fg:#ff9d00 bold"],
  ["question", "bold"],
  ["answer", "fg:#ff9d00 bold"],
  ["pointer", "fg:#ff9d00 bold"],
  ["highlighted", "fg:#ff9d00 bold"],
  ["selected", "fg:#cc5454"],
  ["separator", "fg:#cc5454"],
  ["instruction", ""],
  ["text", ""],
  ["disabled", "fg:#858585 italic"],
]
